# asteroids-game

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/worklows/: build.yml
src/: Asteroid.cpp  Asteroid.hpp  Game.cpp  Game.hpp  Projectile.cpp  Projectile.hpp  Ship.cpp  Ship.hpp  main.cpp
